manifest/rl-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: back-end-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: rl-backend
  template:
    metadata:
      labels:
        component: rl-backend
    spec:
      containers:
        - name: flask-back-end
          image: faysalmehedi/rl-backend:v1
          ports:
          - containerPort: 5000
