manifest/rl-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: front-end-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: rl-frontend
  template:
    metadata:
      labels:
        component: rl-frontend
    spec:
      containers:
        - name: react-frontend
          image: faysalmehedi/rl-frontend:v2
          ports:
            - containerPort: 80
