manifest/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    service: postgres
spec:
  selector:
    service: postgres
  type: ClusterIP
  ports:
  - port: 5432
