manifest/rl-backend-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-node-port
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30050
  selector:
    component: rl-backend
