manifest/rl-frontend-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: front-node-port

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      
  selector:
    component: rl-frontend
