manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
  - host: k8s.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-node-port
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back-node-port
            port:
              number: 5000
